# typestate-pipeline

./: .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
crates/typestate-pipeline/: Cargo.toml  build.rs
crates/typestate-pipeline-macros/: Cargo.toml  README.md
crates/typestate-pipeline-macros/src/: diag.rs  lib.rs  prefix.rs  typestate_factory.rs
crates/typestate-pipeline-macros/src/transitions/: args.rs  codegen.rs  mod.rs  self_ty.rs  sig.rs  spec.rs
crates/typestate-pipeline-macros/src/typestate_factory/: carrier.rs  codegen.rs  container.rs  field.rs  flags.rs  parse_util.rs  pipeline_pair.rs  spec.rs
crates/typestate-pipeline-macros/src/typestate_factory/codegen/: bag_struct.rs  default.rs  drop.rs  empty_alias.rs  finalize_async.rs  finalize_sync.rs  getter.rs  new.rs  overrider.rs  ready_trait.rs  remover.rs  setter.rs
crates/typestate-pipeline/docs/: diagnostics.html
crates/typestate-pipeline/examples/: dataset_authoring.rs  minimal.rs  quickstart.rs
crates/typestate-pipeline/examples/expansions/: lead.md
crates/typestate-pipeline/examples/expansions/combo/: factory_in_pipeline.description.md  factory_in_pipeline.rs  intro.md
crates/typestate-pipeline/examples/expansions/factory/: default.description.md  default.expansion.md  default.rs  empty_alias.description.md  empty_alias.expansion.md  empty_alias.rs  finalize_async.description.md  finalize_async.expansion.md  finalize_async.rs  internal.description.md  internal.expansion.md  internal.rs  intro.md  minimal.description.md  minimal.expansion.md  minimal.rs  no_unsafe.description.md  no_unsafe.expansion.md  no_unsafe.rs  overridable.description.md  overridable.expansion.md  overridable.rs  pipeline_arm.description.md  pipeline_arm.expansion.md  pipeline_arm.rs  ready_trait.description.md  ready_trait.expansion.md  ready_trait.rs  removable.description.md  removable.expansion.md  removable.rs  rename.description.md  rename.expansion.md  rename.rs  required_and_optional.description.md  required_and_optional.expansion.md  required_and_optional.rs  setter_async.description.md  setter_async.expansion.md  setter_async.rs  (+9 more)
crates/typestate-pipeline/examples/expansions/impl_pipelined/: intro.md  minimal.description.md  minimal.expansion.md  minimal.rs
crates/typestate-pipeline/examples/expansions/pipelined/: inspect_combinator.description.md  inspect_combinator.expansion.md  inspect_combinator.rs  intro.md  minimal.description.md  minimal.expansion.md  minimal.rs  with_tag.description.md  with_tag.expansion.md  with_tag.rs
crates/typestate-pipeline/examples/expansions/transitions/: async_breakpoint.description.md  async_breakpoint.expansion.md  async_breakpoint.rs  async_deferred.description.md  async_deferred.expansion.md  async_deferred.rs  intro.md  sync_fallible.description.md  sync_fallible.expansion.md  sync_fallible.rs  sync_infallible.description.md  sync_infallible.expansion.md  sync_infallible.rs
crates/typestate-pipeline/src/: dataset_authoring.rs  lib.rs
crates/typestate-pipeline/src/dataset_authoring/: client.rs  derived.rs  error.rs  kinds.rs  phase.rs  primitives.rs  raw.rs
crates/typestate-pipeline/tests/: expansions.rs  factory.rs  integration.rs  pipeline.rs  safety.rs  transitions.rs  ui_macros.rs
crates/typestate-pipeline/tests/expansions/: combo.rs  factory.rs  impl_pipelined.rs  pipelined.rs  transitions.rs
crates/typestate-pipeline/tests/expansions/combo/: factory_in_pipeline.rs
crates/typestate-pipeline/tests/expansions/factory/: default.rs  empty_alias.rs  finalize_async.rs  internal.rs  minimal.rs  no_unsafe.rs  overridable.rs  pipeline_arm.rs  ready_trait.rs  removable.rs  rename.rs  required_and_optional.rs  setter_async.rs  setter_fallible.rs  setter_input_type.rs  setter_transformer.rs
crates/typestate-pipeline/tests/expansions/impl_pipelined/: minimal.rs
crates/typestate-pipeline/tests/expansions/pipelined/: inspect_combinator.rs  minimal.rs  with_tag.rs
crates/typestate-pipeline/tests/expansions/transitions/: async_breakpoint.rs  async_deferred.rs  sync_fallible.rs  sync_infallible.rs
crates/typestate-pipeline/tests/factory/: async.rs  core.rs  input_type.rs  internal_field.rs  ready_trait.rs
crates/typestate-pipeline/tests/integration/: dataset_authoring.rs  factory_in_pipeline.rs  factory_pipeline.rs
crates/typestate-pipeline/tests/pipeline/: impl_pipelined.rs  inspect.rs
crates/typestate-pipeline/tests/safety/: factory_hygiene.rs  factory_no_leak.rs  factory_no_unsafe.rs  factory_panic_safety.rs  factory_phantom_shape.rs
crates/typestate-pipeline/tests/transitions/: attr_forwarding.rs  core.rs  via_pipelined.rs
crates/typestate-pipeline/tests/ui/: default_helper_without_default.stderr  default_with_async.stderr  default_with_fallible.stderr  factory_async_without_setter.stderr  factory_fallible_without_setter.stderr  factory_no_unsafe_without_feature.stderr  factory_on_enum.rs  factory_on_enum.stderr  input_without_setter.stderr  internal_field_no_pipeline_arm.rs  internal_field_no_pipeline_arm.stderr  internal_with_setter.stderr  pipeline_field_is_private.stderr  ready_trait_rejects_unset_required.rs  ready_trait_rejects_unset_required.stderr  transition_without_into.stderr  transitions_breakpoint_on_sync.stderr  transitions_breakpoint_with_value.stderr  transitions_deferred_on_sync.rs  transitions_deferred_on_sync.stderr  transitions_first_param_not_state.stderr  transitions_on_trait_impl.stderr  transitions_without_pipelined_impl.stderr
crates/typestate-pipeline/tests/ui/nightly/: default_helper_without_default.rs  default_helper_without_default.stderr  default_with_async.rs  default_with_async.stderr  default_with_fallible.rs  default_with_fallible.stderr  factory_async_without_setter.rs  factory_async_without_setter.stderr  factory_fallible_without_setter.rs  factory_fallible_without_setter.stderr  factory_no_unsafe_without_feature.stderr  factory_on_enum.stderr  input_without_setter.stderr  internal_field_no_pipeline_arm.stderr  internal_with_setter.stderr  pipeline_field_is_private.rs  pipeline_field_is_private.stderr  (+12 more)
(+350 files in other folders)
